--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
             <div class="hexagon-item">
                 <div class="hexagon">
                     <div class="hexagon-content">
-                        <img src="maimonides-coat-of-arms.png" alt="Coat of Arms" onerror="this.style.display='none'; this.parentNode.innerHTML='🦁'">
+                        <img src="Maimonides-coat-of-arms.png" alt="Coat of Arms" onerror="this.style.display='none'; this.parentNode.innerHTML='🦁'">
                     </div>
                 </div>
                 <div class="hexagon-label">Coat of Arms</div>
